# camper_controller

./: .gitignore  CMakeLists.txt  OOD-high-lvl-design.drawio  README.md  cross_compile_cmd.txt  design_decisions.md  sdkconfig  sdkconfig.old
Software/central_control_unit/components/high_side_switch/: CMakeLists.txt  hss-esp-expander.cpp  hss-esp-expander.hpp  hss-esp.cpp
Software/central_control_unit/components/high_side_switch/corelib/: hss-variants.cpp
Software/central_control_unit/components/high_side_switch/pal/: hss-pal-adc.hpp
Software/central_control_unit/components/high_side_switch/pal_esp/: hss-pal-adc-esp.cpp
Software/central_control_unit/components/high_side_switch/pal_esp_expander/: hss-pal-gpio-esp-expander.cpp  hss-pal-gpio-esp-expander.hpp
Software/touch_screen_ui/7-inch-lcd-esp32-s3/main/: CMakeLists.txt  esp_common.c  idf_component.yml
Software/touch_screen_ui/7-inch-lcd-esp32-s3/main/assets/: icon_power.c  motor_64.c  temp_inside_campervan_64.c
Software/touch_screen_ui/7-inch-lcd-esp32-s3/main/camper_ui/: Calculations.ipynb  camper_app_ui.h  common.h  dashboard_screen.h  electric_screen.h  ui_tests.h
central_control_unit/components/high_side_switch/: CMakeLists.txt  hss-esp.cpp  hss-esp.hpp  hss-pal-adc-esp.cpp  hss-pal-adc-esp.hpp  hss-pal-gpio-esp.cpp  hss-pal-gpio-esp.hpp  hss-pal-timer-esp.cpp  hss-pal-timer-esp.hpp
central_control_unit/components/high_side_switch/corelib/: hss.hpp
central_control_unit/components/high_side_switch/pal_esp/: hss-pal-adc-esp.hpp  hss-pal-gpio-esp.cpp  hss-pal-timer-esp.cpp  hss-pal-timer-esp.hpp
central_control_unit/components/high_side_switch/pal_esp_expander/: hss-pal-adc-esp-expander.cpp  hss-pal-adc-esp-expander.hpp
(+239 files in other folders)
